feat: Add sitemap, robots.txt, SEO meta tags, update schema URLs, and implement dynamic Hero component.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     content="Car rental & private chauffeur in KL. Self-drive or with driver. Toyota Alphard, Innova, Perodua Axia. Airport transfers & long trips. Book 24/7 now." />
   <meta name="theme-color" content="#001a3d" />
 
+  <!-- SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="author" content="AJ Taxi KL" />
+  <meta name="geo.region" content="MY-14" />
+  <meta name="geo.placename" content="Kuala Lumpur" />
+  <meta name="geo.position" content="3.139003;101.686855" />
+  <meta name="ICBM" content="3.139003, 101.686855" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://travthru.com/" />
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ajtaxikl.com/" />
@@ -34,10 +45,10 @@
       "@graph": [
         {
           "@type": "LocalBusiness",
-          "@id": "https://harrastransfer.com/#organization",
+          "@id": "https://travthru.com/#organization",
           "name": "AJ Taxi KL",
           "alternateName": "Harra Transfer",
-          "url": "https://harrastransfer.com",
+          "url": "https://travthru.com",
           "description": "Premium car rental and private chauffeur service in Kuala Lumpur. Self-drive or with driver. Specializing in airport transfers, long-distance trips, and hourly bookings.",
           "priceRange": "$$",
           "address": {
@@ -68,9 +79,9 @@
         },
         {
           "@type": "TaxiService",
-          "@id": "https://harrastransfer.com/#taxiservice",
+          "@id": "https://travthru.com/#taxiservice",
           "serviceType": "Private Chauffeur Service",
-          "provider": {"@id": "https://harrastransfer.com/#organization"},
+          "provider": {"@id": "https://travthru.com/#organization"},
           "areaServed": [
             {"@type": "City", "name": "Kuala Lumpur"},
             {"@type": "State", "name": "Selangor"}
@@ -78,9 +89,9 @@
         },
         {
           "@type": "AutoRental",
-          "@id": "https://harrastransfer.com/#carrental",
+          "@id": "https://travthru.com/#carrental",
           "name": "AJ Taxi KL Car Rental",
-          "provider": {"@id": "https://harrastransfer.com/#organization"},
+          "provider": {"@id": "https://travthru.com/#organization"},
           "areaServed": [
             {"@type": "City", "name": "Kuala Lumpur"},
             {"@type": "State", "name": "Selangor"}
